added stylesheet and worked on navbar

--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="./public/styles/styles.css" />
+  </head>
+  <body>
     <!-- Navigation Bar -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>  
-            </ul>            
-        </nav>
+    <header class="header">
+      <nav class="nav">
+        <!-- <img
+          class="nav-logo"
+          src="./public/images/purple-laptop-img.jpg"
+          alt="purple-laptop-img"
+        /> -->
+        <div class="nav-container">
+          <ul class="ul-container">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <!-- Main Section -->
-    <main>
+    <main class="main">
+      <div class="main-container">
         <h1>Nicole Payne</h1>
-        <h2>Full-Stack Developer</h2>        
+        <h2>Full-Stack Developer</h2>
+      </div>
     </main>
-</body>
+
+    <!-- Footer Section -->
+    <footer class="footer"></footer>
+  </body>
 </html>
